<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/text_padding"
                        android:text="@string/team1_name"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/team_name_size" />

                    <ImageView
                        android:layout_width="@dimen/team_image_size"
                        android:layout_height="@dimen/team_image_size"
                        android:contentDescription="@string/team1_image_desc"
                        android:src="@drawable/pittsburgh_steelers" />
                </LinearLayout>

                <TextView
                    android:id="@+id/team1_score_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_init_value"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/team_score_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kicks_number_text"
                        android:padding="@dimen/text_padding"
                        android:textSize="@dimen/team_kicks_numbers_text_size"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/team1_kicks_number_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_init_value"
                        android:padding="@dimen/text_padding"
                        android:textSize="@dimen/team_kicks_numbers_text_size"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <Button
                    android:id="@+id/team1_touchdown_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_touchdown_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_touchdown_btn" />

                <Button
                    android:id="@+id/team1_field_goal_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_field_goal_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_field_goal_btn" />

                <Button
                    android:id="@+id/team1_safety_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_safety_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_safety_btn" />

                <Button
                    android:id="@+id/team1_pass_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_pass_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_pass_btn" />

                <Button
                    android:id="@+id/team1_kick_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_kick_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_kick_btn" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/team_image_size"
                        android:layout_height="@dimen/team_image_size"
                        android:contentDescription="@string/team1_image_desc"
                        android:src="@drawable/dallas_cowboys" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/text_padding"
                        android:text="@string/team2_name"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/team_name_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/team2_score_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_init_value"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/team_score_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kicks_number_text"
                        android:padding="@dimen/text_padding"
                        android:textSize="@dimen/team_kicks_numbers_text_size"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/team2_kicks_number_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_init_value"
                        android:padding="@dimen/text_padding"
                        android:textSize="@dimen/team_kicks_numbers_text_size"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <Button
                    android:id="@+id/team2_touchdown_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_touchdown_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_touchdown_btn" />

                <Button
                    android:id="@+id/team2_field_goal_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_field_goal_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_field_goal_btn" />

                <Button
                    android:id="@+id/team2_safety_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_safety_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_safety_btn" />

                <Button
                    android:id="@+id/team2_pass_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_pass_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_pass_btn" />

                <Button
                    android:id="@+id/team2_kick_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/points_kick_btn"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/points_kick_btn" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/btn_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/btn_padding"
        android:text="@string/reset_btn"
        android:textColor="@android:color/white" />

</LinearLayout>